Issue #2191 - JPMS Support.
Introduced --jpms option in jetty-start to run Jetty from the module-path.

Introduced [jpms] sections in *.mod files, to specify JPMS command line
options that needs to be added to the command line generated by jetty-start.

Bumped java.transaction-api to 1.3 because it has Automatic-Module-Name.

Fixed ASM version lookup using ManifestUtils.

Fixed WebInfConfiguration.findAndFilterContainerPaths() to properly
scan the module-path, which may contain both files and directories.

Signed-off-by: Simone Bordet <simone.bordet@gmail.com>